--- a/templates/static/style.css
+++ b/templates/static/style.css
@@ -1,34 +1,203 @@
+
 html, body{
-	width: 1440px;
-    height: 100%;
     margin: 0px;
-    background-color: #d2d4d6;
+    background-color: #e6e6e6;
     position: relative;
+	font-family: sans-serif;
+	scroll-behavior: smooth;
 }
 
 div.search_card{
 	width: 40%;
-	height: 400px;
-	margin-left: 30%;
-	margin-right: 30%;
+	margin-left:30%;
 	background-color: white;
 	flex-direction: column;
+	border: solid 1px #e8e8e8;
 }
-div.search_card_header{
-	width: 100%;
-	height: 130px;
+#search_card_header{
 	background-color: #8BD0FA;
+	width: 100%;
+	padding:20px 20px 15px 20px;
+	box-sizing: border-box;
+	display:flex;
+	flex-direction: column;
+	border: solid 1px #e8e8e8;
+	color:#505050;
 }
-p.search_card_header{
+#search_card_header_title{
 	font-size: 20px;
+	margin-top:0;
+	font-weight: bold;
+}
+#search_card_header_subtitle{
+	font-size: 16px;
+	margin:0;
 }
 div.search_card_body{
 	width: 100%;
-	height: 270px;
+	padding:15px 25px;
+	box-sizing: border-box;
 	background-color: white;
+	padding-bottom: 30px;
+}
+.form_row{
+	margin-bottom:15px;
+	display:flex;
+	align-items:center;
+	justify-content:space-between;
+	width:100%;
+}
+.form_column{
+	width:48%;
+}
+.form_element{
+	width:100%;
+	display:flex;
+	flex-direction: column;
+}
+label{
+	color:#5f74ac;
+	margin-bottom:5px;
+	font-size:14px;
+}
+input{
+	border-style: solid;
+	border-color: #DEDEDE;
+	border-width: 1px;
+	padding:5px 10px;
+	font-size:14px;
+	outline: none;
+}
+select{
+	border-style: solid;
+	border-color: #DEDEDE;
+	border-width: 1px;
+	padding:5px 10px;
+	font-size:14px;
+	outline: none;
+}
+#auto-detect-text{
+	color:#7587b8;
+}
+#submit_search {
+	color:#fff;
+	background-color:#566da8;
+	border:none;
+	padding:10px 20px;
+	border-bottom: solid 3px #3a4b74;
+	transition: all 0.2s;
+}
+button{
+	color:#fff;
+	background-color:#566da8;
+	border:none;
+	padding:10px 20px;
+	border-bottom: solid 3px #3a4b74;
+	transition: all 0.2s;
+}
+button:hover{
+	cursor:pointer;
+	opacity: 0.9;
+}
+.secondary_button{
+	background-color:#f5b941;
+	border-bottom: solid 3px #ec8a33;
+}
+
+
+#container {
+  height: 400px;
+  max-width: 800px;
+  min-width: 380px;
+  height: 310px;
+  margin: 0 auto;
+}
+
+#loading {
+  margin-top: 100px;
+  text-align: center;
 }
 
 .card {
 	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 	transition: 0.3s;
+  }
+
+#today-card{
+	margin-top:20px;
+	box-shadow: #3333 0px 0px 5px 1px;
+	padding:15px 20px;
+	box-sizing: border-box;
+}
+.card-row{
+	display:flex;
+	justify-content: space-between;
+}
+
+#temperature{
+	font-size:92px
+}
+
+.weather-value{
+	color: #868686;
+}
+.weather-image{
+	margin:10px;
+}
+.weather-element{
+	display: flex;
+	align-items:center;
+	flex-direction: column;
+}
+table{
+	width: 60vw;
+	margin-left:20vw;
+	border-collapse:collapse;
+	margin-top:30px;
+}
+th{
+	color: #3d414b;
+	font-weight: 500;
+	background-color: #506cac;
+	padding:10px;
+	font-size: 1em;
+}
+tr{
+	color: #3d414b;
+	background-color: white;
+	border-bottom:solid 5px #e6e6e6;
+	font-size: 0.75em;
+	text-align: center;
+	justify-content: space-between;
+	height: 40px;
+	/* padding-top: 10px;
+	padding-bottom: 10px; */
+}
+#daily-weather{
+	margin-top:20px;
+	box-shadow: #3333 0px 0px 5px 1px;
+	padding:15px 20px;
+	box-sizing: border-box;
+	width: 40vw;
+	margin-left: 30vw;
+	background-image: linear-gradient(#ffffff, #384b79);
+}
+
+.d-date{
+	color: #384b79;
+	font-size: 2em;
+}
+
+#today-card:hover{
+	box-shadow: #3333 0px 0px 8px 3px;
+}
+
+#daily-weather:hover{
+	box-shadow: #3333 0px 0px 8px 3px;
+}
+
+.req:after {
+    content: "*";
+    color: red;
+	display: inline;
   }
